# pcannonProjectStandards

./: .gitignore  LICENSE.txt  setup.sh
bash/: compile.sh  open.sh  run.sh
c/: EXAMPLEconfig.h  EXAMPLEpredefines.h  predefines.h
cmake/: CMakeLists.txt
cmake/untested/: CMakeLists.txt
private/: project.json
